--- a/course-02/project/image-filter-starter-code/package.json
+++ b/course-02/project/image-filter-starter-code/package.json
@@ -24,6 +24,7 @@
     "@types/bluebird": "^3.5.27",
     "@types/express": "^4.17.0",
     "@types/node": "^11.13.17",
+    "@types/validator": "^13.6.3",
     "ts-node-dev": "^1.0.0-pre.40",
     "tslint": "^5.18.0",
     "typescript": "^3.5.3"
@@ -32,7 +33,8 @@
     "express": "^4.17.1",
     "jimp": "^0.16.1",
     "prettier": "^2.3.2",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "validator": "^13.6.0"
   },
   "prettier": {
     "trailingComma": "es5",
