--- a/course-02/project/image-filter-starter-code/package.json
+++ b/course-02/project/image-filter-starter-code/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/bluebird": "^3.5.27",
     "@types/express": "^4.17.0",
+    "@types/jsonwebtoken": "^8.5.4",
     "@types/node": "^11.13.17",
     "@types/validator": "^13.6.3",
     "ts-node-dev": "^1.0.0-pre.40",
@@ -30,8 +31,10 @@
     "typescript": "^3.5.3"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jimp": "^0.16.1",
+    "jsonwebtoken": "^8.5.1",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
     "validator": "^13.6.0"
